Refactor XP system to Rank system; implement chapter scores and promotion ceremonies
- Updated README.md to reflect changes from XP points to Rank system and added promotion ceremonies.
- Modified index.html to display current rank instead of XP points.
- Refactored app.js to track chapter scores and calculate ranks based on performance.
- Adjusted lessons.js to require completion of interactive activities before proceeding.
- Enhanced quiz.js to randomize answer options and ensure correct answers are required for progression.
- Updated styles.css to include new styles for rank display and promotion modal.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <h1>WARHAMMER 40K<br><span>STATISTICS ACADEMY</span></h1>
                 </div>
                 <div class="progress-display">
-                    <div class="xp-counter">
-                        <i class="fas fa-star"></i>
-                        <span id="xp-points">0</span> XP
+                    <div class="rank-display">
+                        <i class="fas fa-medal"></i>
+                        <span id="current-rank">Recruit</span>
                     </div>
                     <div class="chapter-progress">
                         Chapter <span id="current-chapter">1</span> of <span id="total-chapters">10</span>
