feat: Implement Admin Mode with management features and UI enhancements

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <script src="js/modules/DataManager.js"></script>
     <script src="js/modules/ProgressManager.js"></script>
     <script src="js/modules/ContentManager.js"></script>
+    <script src="js/modules/AdminManager.js"></script>
     
     <!-- Load UI Components -->
     <script src="js/components/ChapterComponent.js"></script>
